[project]
name = "azure-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity==1.24.0",
    "azure-mgmt-compute==36.0.0",
    "azure-mgmt-containerregistry==14.0.0",
    "azure-mgmt-containerservice==39.1.0",
    "azure-mgmt-dns==9.0.0",
    "azure-mgmt-keyvault==12.0.0",
    "azure-mgmt-network==29.0.0",
    "azure-mgmt-postgresqlflexibleservers==1.1.0",
    "azure-mgmt-privatedns==1.2.0",
    "azure-mgmt-resource==24.0.0",
    "azure-mgmt-sql==3.0.1",
    "azure-mgmt-storage==23.0.1",
    "jsonpickle>=4.1.1",
    "python-dotenv==1.1.1",
]
